--- a/wp-content/themes/sparkling/custom-style.css
+++ b/wp-content/themes/sparkling/custom-style.css
@@ -3,6 +3,32 @@
     padding-top: 10px;
 
 }
+.top-nav{
+text-align: end; 
+margin: 13px 0 auto;
+color: #FFF;
+}
+
+.top-nav span a{
+color: #FFF;
+font-size:13px;
+padding: 0 5px;
+
+}
+
+.but-down {
+    background-color: #397BF3;
+    font-size: 10px;
+    padding: 1px 15px;
+    border-radius: 15px;
+    font-weight: bold;
+    margin: 0px 0px 0px 10px;
+}
+
+.but-down a {
+    font-size: 10px!important;
+ }
+
 .nav.navbar-nav {
 
     float: right;
@@ -15,7 +41,8 @@
 .flexslider {
     margin-top: -80px;
 }
-
+.flex-nav-prev{display:none;}
+.flex-nav-next{display:none;}
 #nav-cus {
 display:grid;
 }
@@ -33,8 +60,6 @@ background-color:transparent;
     font-weight: bold;
 
 }
-
-
 
 .ui-slider .ui-slider-handle {
     position: absolute;
@@ -55,13 +80,12 @@ background-color:transparent;
     box-shadow: 0px 1px 2px 1px #CCC;
 
 }
-
-
-.but-down {
-    background-color: #397BF3;
-    font-size: 10px;
-    padding: 1px 9px;
-    border-radius: 15px;
-    font-weight: bold;
-    margin: 0px 0px 0px 10px;
+.flex-caption .excerpt-a
+{
+    display: block;
+    color: #fff;
+    font-size: 20px;
+    padding: 12px 20px;
+text-decoration:underline;
+font-weight:400;
 }
