--- a/wp-content/themes/sparkling/style.css
+++ b/wp-content/themes/sparkling/style.css
@@ -987,7 +987,7 @@ button:hover, .button:hover {
 }
 
 .nav > li > a {
-    text-transform: uppercase;
+  font-size: 16px;
 }
 
 .navbar.navbar-default {
@@ -1204,7 +1204,7 @@ button:hover, .button:hover {
 }
 
 .navbar-nav > li {
-    padding: 15px;
+    padding: 0px 10px;
     color: #F5F7FA;
 }
 
@@ -1701,7 +1701,7 @@ p.logged-in-as {
 
 .site-info .nav a {
     padding: 10px 15px;
-    text-transform: uppercase;
+    
 }
 
 @media (max-width: 768px) {
